<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/mDrawerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		layout="@layout/overlay"/>

	<LinearLayout
		android:layout_gravity="right"
		android:orientation="vertical"
		android:layout_width="300dp"
		android:layout_height="match_parent"
		android:background="#FFFFFFFF">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<androidx.cardview.widget.CardView
					android:id="@+id/card_customBtn"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_gravity="center"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="10dp"
					app:cardBackgroundColor="#FFFFA9A1"
					app:cardCornerRadius="5dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:text="@string/customBtn"
						android:textSize="16sp"
						android:textColor="#FFFFFFFF"/>

					<TextView
						android:layout_marginTop="25dp"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:text="自定义开启后点击屏幕黑色区域打开自定义菜单,点击悬浮按键保存"
						android:textSize="8sp"
						android:textColor="#FFFFFFFF"/>

				</androidx.cardview.widget.CardView>


				<androidx.cardview.widget.CardView
					android:id="@+id/card_exit"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:layout_gravity="center"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginTop="10dp"
					app:cardBackgroundColor="#FFFFA9A1"
					app:cardCornerRadius="5dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="center"
						android:text="@string/exitGame"
						android:textSize="16sp"
						android:textColor="#FFFFFFFF"/>

				</androidx.cardview.widget.CardView>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

	<LinearLayout
		android:layout_gravity="left"
		android:orientation="vertical"
		android:layout_width="300dp"
		android:layout_height="match_parent"
		android:background="#FFFFFFFF">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.cardview.widget.CardView
						android:id="@+id/card_command"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="5dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="@string/command"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>

					<androidx.cardview.widget.CardView
						android:id="@+id/card_commandSetting"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="5dp"
						android:layout_marginRight="10dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="@string/cmdSetting"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>

				</LinearLayout>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.cardview.widget.CardView
						android:id="@+id/card_buttonVisible"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="5dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="@string/btnVisibility"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>

					<androidx.cardview.widget.CardView
						android:id="@+id/card_destorySwitch"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="5dp"
						android:layout_marginRight="10dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="@string/destoryOrPlace"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>

				</LinearLayout>
                
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_tly"
                        android:layout_width="135dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="#FFFFA9A1"
                        app:cardCornerRadius="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/gyroscopeSwitch"
                            android:textSize="16sp"
                            android:textColor="#FFFFFFFF"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_quan"
                        android:layout_width="135dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="#FFFFA9A1"
                        app:cardCornerRadius="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/allKey"
                            android:textSize="16sp"
                            android:textColor="#FFFFFFFF"/>

                    </androidx.cardview.widget.CardView>

				</LinearLayout>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<androidx.cardview.widget.CardView
						android:id="@+id/card_mouse_switch"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="5dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="切换鼠标控制模式"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>


					<androidx.cardview.widget.CardView
						android:id="@+id/card_guesture_disable"
						android:layout_width="135dp"
						android:layout_height="70dp"
						android:layout_gravity="center"
						android:layout_marginLeft="5dp"
						android:layout_marginRight="10dp"
						android:layout_marginTop="10dp"
						app:cardBackgroundColor="#FFFFA9A1"
						app:cardCornerRadius="5dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:text="禁用手势"
							android:textSize="16sp"
							android:textColor="#FFFFFFFF"/>

					</androidx.cardview.widget.CardView>

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>

